# Kenkrusty-FM

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
desktop_UI/: index.html
desktop_UI/assets/: index-d59bcc88.css  index-e297d4c2.js  index-e297d4c2.js.map
kenkrusty_control/: index.html  index.js  styles.css
mobile_UI/: index.html
mobile_UI/assets/: index-03eaa0fe.js  index-0557a96f.css  index-09a2c8a4.js  index-123c96ec.css  index-168527a4.css  index-169bcc00.js  index-16e4c390.js  index-17f6848f.js  index-1ed0962c.js  index-1f700566.js  index-20b8f638.js  index-2174cc15.js  index-23e086e9.js  index-25bcd066.js  index-2ab2fce7.js  index-2e8a205b.css  index-33c76670.js  index-357991fd.css  index-3a3cb934.css  index-3bd5eaba.js  index-3c760d24.js  index-3d6aeef8.js  index-41fcf23b.js  index-43d4296b.js  index-4584b25e.js  index-47e7a2df.js  index-4abddee4.css  index-4e8efdc4.css  index-4ff464a1.js  index-526bd048.css  index-56f0da1a.js  index-58f4a2fd.js  index-63f5524b.js  index-6c043637.js  index-755373ca.js  index-75daebc3.css  (+29 more)
src/: App.jsx  form.jsx  main.rs
src-front/: package-lock.json
src-mobile/: index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: Falcon.rs  KenkuRemoteAPI.rs  kenkrusty_api.rs  kenku_remote_api.rs  lib.rs  local_ip.rs  main.rs
src-tauri/src/falcon/: base.rs  commands.rs  mod.rs
src-tauri/src/kenkrusty_api/: commands.rs  mod.rs  structs.rs
src-tauri/src/kenku_remote/: commands.rs  structs.rs
src-tauri/src/tauron/: commands.rs  mod.rs
(+22 files in other folders)
