[package]
name = "kenkrusty-fm"
version = "0.0.0"
description = "A Tauri App"
authors = ["Lucas-BRT"]
license = "GNU General Public License v3.0"
repository = "https://github.com/Lucas-BRT/Kenkrusty-FM"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }

tokio = { version = "1.17", features = ["full"] }

rocket = { version = "=0.5.0-rc.3"}

include_dir = "0.7.3"
tempfile = "3.5.0"

local-ip-address = "0.5.3"

dirs = "5.0.1"

[default]
address = "0.0.0.0"
port = 8000

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
